--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class = "project"><a href="https://hotburgersummer.netlify.app/"><img src="project1.png" alt="placeholder"></a></div>
     <div class = "project"><a href="#"><img src="projectimg.jpeg" alt="placeholder"></a></div>
     <div class = "project"><a href="#"><img src="projectimg.jpeg" alt="placeholder"></a></div>
-    <div class = "project"><a href="#"><img src="projectimg.jpeg" alt="placeholder"></a></div>
+    <div class = "project"><a href="https://newmenu.netlify.app/"><img src="project4.png" alt="placeholder"></a></div>
     </div>
     <br />
    <div id="contactMe"> 
