--- a/index.html
+++ b/index.html
@@ -15,36 +15,44 @@
         <li><a href="#contactMe">Contact Me</a></li>
       </ul>
   </nav>
-  <header><h1>Gabriel Deleon</h1><h2>Software Engineer</h3>
+  <header>
+    <h1>Gabriel Deleon</h1>
+    <h2>Software Engineer</h3>
   </header>
   
-  </div>
   <div id="aboutMe">
-    
-  <h3>About Me</h3>
-  <div id="imageDiv"></div>
-  <p>I am a software engineer in New York State. My goal is to help my company achieve and create maintainable and scalable code to enhance production. My passion is developing functionality that would help our colleagues achieve their top potential by simplifying their daily tasks that will provide them with more time to help our clients. Whether your goal is to hire a new software engineering out of college or one with 1-2 years of experience, I would love to talk with you and show you how I can be an asset to your organization.</p>
-</div>
-      <h3>Projects</h3>
-   <div id="projects">
+    <h3>About Me</h3>
+    <div id="imageDiv"></div>
+    <p>I am a software engineer in New York State. My goal is to help my company achieve and create maintainable and scalable code to enhance production. My passion is developing functionality that would help our colleagues achieve their top potential by simplifying their daily tasks that will provide them with more time to help our clients. Whether your goal is to hire a new software engineering out of college or one with 1-2 years of experience, I would love to talk with you and show you how I can be an asset to your organization.</p>
+  </div>
+
+  <h3>Projects</h3>
+  <div id="projects">
     <div class = "project"><a href="https://hotburgersummer.netlify.app/"><img src="project1.png" alt="placeholder"></a></div>
-    <div class = "project"><a href="#"><img src="projectimg.jpeg" alt="placeholder"></a></div>
+    <div class = "project"><a href="https://leadgenerator.netlify.app/reviews"><img src="project2.png" alt="placeholder"></a></div>
     <div class = "project"><a href="#"><img src="projectimg.jpeg" alt="placeholder"></a></div>
     <div class = "project"><a href="https://newmenu.netlify.app/"><img src="project4.png" alt="placeholder"></a></div>
-    </div>
+  </div>
+  <br />
+  <div id="contactMe"> 
+   <br />
+   <div class ="formWrapper">
     <br />
-   <div id="contactMe"> 
-    <br />
-    <div class ="formWrapper">
-      <br />
-      <h3>Contact Me</h3>
-     <form action="#">
+    <h3>Contact Me</h3>
+    <form action="#">
       <input type="text" class="inputBox" id="name"  placeholder="Name">
       <input type="text" class="inputBox" id="email"  placeholder="Email">
-      <textarea class="inputBox" id="message"  placeholder="Message" rows="10" cols="50"></textarea>
+      <textarea 
+        class="inputBox" 
+        id="message"  
+        placeholder="Message" 
+        rows="10" 
+        cols="50"
+        >
+      </textarea>
       <br>
       <input type="submit" value="Submit">
-      </form>
-    </div>
+    </form>
+   </div>
 </body>
 </html>
