adding third project

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Gabriel Deleon's Portfolio</title>
 </head>
   <nav class="navigation">
+    <h1>Gabriel Deleon</h1>
+    <h2>Software Engineer</h3>
       <ul class="nav"> 
         <li><a href="#">Home</a></li>
         <li><a href="#aboutMe">About Me</a></li>
@@ -15,10 +17,6 @@
         <li><a href="#contactMe">Contact Me</a></li>
       </ul>
   </nav>
-  <header>
-    <h1>Gabriel Deleon</h1>
-    <h2>Software Engineer</h3>
-  </header>
   
   <div id="aboutMe">
     <h3>About Me</h3>
@@ -28,16 +26,16 @@
 
   <h3>Projects</h3>
   <div id="projects">
-    <div class = "project"><a href="https://hotburgersummer.netlify.app/"><img src="project1.png" alt="placeholder"></a></div>
-    <div class = "project"><a href="https://leadgenerator.netlify.app/reviews"><img src="project2.png" alt="placeholder"></a></div>
-    <div class = "project"><a href="#"><img src="projectimg.jpeg" alt="placeholder"></a></div>
-    <div class = "project"><a href="https://newmenu.netlify.app/"><img src="project4.png" alt="placeholder"></a></div>
+    <div class = "project"><a href="https://hotburgersummer.netlify.app/"><img src="project1.png" alt="Hot Burger Summer App"></a></div>
+    <div class = "project"><a href="https://leadgenerator.netlify.app/reviews"><img src="project2.png" alt="Lead Generator App"></a></div>
+    <div class = "project"><a href="https://skill-bid.netlify.app/"><img src="project3.png" alt="Skillz Bid app"></a></div>
+    <div class = "project"><a href="https://newmenu.netlify.app/"><img src="project4.png" alt="New Menu App"></a></div>
   </div>
-  <br />
+
   <div id="contactMe"> 
-   <br />
+
    <div class ="formWrapper">
-    <br />
+ 
     <h3>Contact Me</h3>
     <form action="#">
       <input type="text" class="inputBox" id="name"  placeholder="Name">
