fixing the website for project 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h3>Projects</h3>
   <div id="projects">
     <div class = "project"><a href="https://hotburgersummer.netlify.app/"><img src="project1.png" alt="Hot Burger Summer App"></a></div>
-    <div class = "project"><a href="https://leadgenerator.netlify.app/reviews"><img src="project2.png" alt="Lead Generator App"></a></div>
+    <div class = "project"><a href="https://leadgenerator.netlify.app/"><img src="project2.png" alt="Lead Generator App"></a></div>
     <div class = "project"><a href="https://skill-bid.netlify.app/"><img src="project3.png" alt="Skillz Bid app"></a></div>
     <div class = "project"><a href="https://newmenu.netlify.app/"><img src="project4.png" alt="New Menu App"></a></div>
   </div>
